Email and alignment fixes Greeting

--- a/src/components/Dashboard/Captainbee/CaptainDash.css
+++ b/src/components/Dashboard/Captainbee/CaptainDash.css
@@ -43,7 +43,7 @@
 
 .greet-container{
   width: 1100px;
-  max-width: 1000px;
+  max-width: 1100px;
   /* height: 650px; */
   padding: 20px;
   margin-left: 30px;
